# cmake_playground

./: CMakeLists.txt  README.md  cmake_playground.c  cmake_playground.h  one_executable.c
imported/: big_library.h  second_executable.c  smol_library.h
organized/: smol_library.h
